# V2_jinao

./: .gitignore  指令.txt
Connection/: .gitignore  README.md  setup.sh
Connection/source/connection_tasks/: README.md  pyproject.toml
Connection/source/connection_tasks/config/: extension.toml
Connection/source/connection_tasks/connection_tasks/: __init__.py  assets_paths.py
FrankaCabinetKnife/source/franka_cabinet_knife_tasks/: README.md  pyproject.toml
FrankaCabinetKnife/source/franka_cabinet_knife_tasks/config/: extension.toml
FrankaCabinetKnife/source/franka_cabinet_knife_tasks/franka_cabinet_knife_tasks/: __init__.py  assets_paths.py
KitchenV0/source/kitchen_tasks/: README.md  pyproject.toml
franka_d435_foundationpose/: README.md  pyproject.toml
franka_d435_foundationpose/assets/masks/: README.md
franka_d435_foundationpose/assets/meshes/: README.md
franka_d435_foundationpose/configs/: camera_d435.yaml  camera_mount.yaml  foundationpose.yaml  hand_eye.yaml  object_assets.yaml
franka_d435_foundationpose/envs/: README.md  environment_foundationpose.yml  requirements_isaaclab_side.txt
franka_d435_foundationpose/franka_d435_foundationpose/: __init__.py
franka_d435_foundationpose/franka_d435_foundationpose/camera/: __init__.py  frame_types.py  isaaclab_camera_provider.py  mount_config.py  realsense_d435_provider.py  saved_rgbd_provider.py
franka_d435_foundationpose/franka_d435_foundationpose/foundationpose/: __init__.py  foundationpose_wrapper.py  mask_provider.py  mesh_loader.py  mock_foundationpose.py
franka_d435_foundationpose/franka_d435_foundationpose/isaaclab/: __init__.py  attach_d435_to_franka.py  franka_d435_scene.py  saved_scene_loader.py
franka_d435_foundationpose/franka_d435_foundationpose/server/: __init__.py  pose_client.py  pose_server.py
franka_d435_foundationpose/franka_d435_foundationpose/transforms/: __init__.py  frame_conventions.py  hand_eye.py  se3.py
franka_d435_foundationpose/franka_d435_foundationpose/utils/: __init__.py  config.py  depth_utils.py  image_io.py  logging_utils.py
franka_d435_foundationpose/franka_d435_foundationpose/validation/: __init__.py  pose_metrics.py
franka_d435_foundationpose/scripts/: _bootstrap.py  check_env.py  generate_mock_rgbd_sample.py  instrument_latest_scene_with_sensors.py  run_foundationpose_on_saved_rgbd.py  run_instrumented_scene_pose_test.py  run_isaaclab_franka_d435_demo.py  run_realsense_d435_live.py  run_saved_scene_ee_d435_demo.py  start_pose_server.py  view_d435_depth_live.py  visualize_pose_result.py
(+460 files in other folders)
