[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "franka_d435_foundationpose"
version = "0.1.0"
description = "Bridge a Franka-mounted Intel RealSense D435 with FoundationPose for 6D object pose estimation (IsaacLab sim + real robot)."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "BSD-3-Clause" }
authors = [{ name = "IsaacLab user" }]

# IsaacLab-side (light) dependencies only. The FoundationPose-side heavy deps
# (torch, pytorch3d, nvdiffrast, ...) live in the separate `foundationpose`
# conda env and are intentionally NOT declared here.
dependencies = [
    "numpy",
    "opencv-python",
    "pyyaml",
    "scipy",
    "pyzmq",
]

[project.optional-dependencies]
realsense = ["pyrealsense2"]
test = ["pytest"]

[tool.setuptools.packages.find]
include = ["franka_d435_foundationpose*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
