[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kitchen_tasks"
version = "0.1.0"
description = "KitchenV0 Isaac Lab tasks: Franka kitchen scene prototype."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "BSD-3-Clause" }
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["kitchen_tasks*"]
